comment overflow fixed

--- a/src/app/todo-list/todo-comment/todo-comment.component.css
+++ b/src/app/todo-list/todo-comment/todo-comment.component.css
@@ -42,7 +42,7 @@ label.title.editing {
 } */
 input {
     display: block;
-    margin: 0;
+    margin-top: 20px;
     width: 100%;
     font-size: 24px;
     font-family: inherit;
